<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="horizontal"

    tools:context=".RenkActivity">


    <Button
        android:id="@+id/btnBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/black"
        android:textColor="@color/white"
        style="?android:borderlessButtonStyle"
        android:weightSum="0.25">

    </Button>


    <Button
        android:id="@+id/btnGreenDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/greendark"
        android:text="@string/greendark"
        android:textColor="@color/white"
        style="?android:borderlessButtonStyle"
        android:weightSum="0.25"
        >
    </Button>

    <Button
        android:id="@+id/btnGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:textColor="@color/white"
        android:text="@string/grey"
        style="?android:borderlessButtonStyle"
        android:weightSum="0.25">

    </Button>

    <Button
        android:id="@+id/btnOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/orangedark"
        android:baselineAligned="false"
        android:text="@string/orangedark"
        android:textColor="@color/white"
        style="?android:borderlessButtonStyle"
        android:weightSum="0.25">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRenkMainGeriDon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/geridon">

        </Button>

    </LinearLayout>


</LinearLayout>